--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "This is a Workshop about Cypress",
   "main": "index.js",
   "scripts": {
-    "test:open": "cypress open"
-  },
+    "test:open": "npm run lint && cypress open",
+    "lint": "eslint ./cypress/integration/**/*.ts",
+    "lint:fix": "npm run lint -- --fix"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/acastrillonv/cypress-training.git"
